--- a/exercicios/Aula 14-ex2/style.css
+++ b/exercicios/Aula 14-ex2/style.css
@@ -14,19 +14,20 @@ header {
 section {
     background-color: white;
     border-radius: 10px;
-    padding: 15px;
+    padding: 10px;
     margin: auto;
     width: 500px;
     height: 300px;
     box-shadow: 0px 0px 5px 2px #00000062;
+    margin-bottom: 10px;
 }
 
+strong {
+    color: rgb(245, 245, 245);
+}
 
 footer {
     text-align: center;
     color: white;
 }
 
-strong {
-    color: rgb(245, 245, 245);
-}
