--- a/exercicios/Aula 16-ex/style.css
+++ b/exercicios/Aula 16-ex/style.css
@@ -11,9 +11,7 @@ header {
     color: white;
 }
 
-p {
-    margin: 0px;
-}
+
 
 section {
     background-color: white;
@@ -22,6 +20,10 @@ section {
     margin: auto;
     width: 500px;
     box-shadow: 0px 0px 5px 2px #00000062;
+}
+
+select {
+    width: 180px;
 }
 
 
